<resources>
    <string name="app_name">焕然一璐</string>
    <string name="diary_public">发表</string>
    <string name="quire">查询</string>
    <string name="diary">焕然一璐的日记</string>
    <string name="write_diary">写日记</string>
    <string name="back">返回</string>
    <string name="input_diary_hit_title">小楠和小璐的日记</string>
    <string name="input_diary_hit_content">记录下那些，属于我们的点点滴滴……</string>
    <string name="public_title_empty">璐宝宝，你标题忘写啦~</string>
    <string name="public_content_empty">写点东西再发表吧亲</string>
    <string name="public_success">发表成功O(∩_∩)O~~</string>
    <string name="public_failed">呜呜，发表失败了，再试一次吧~</string>
    <string name="order">排序</string>
    <string name="diary_detail">日记</string>
    <string name="day">天</string>
    <string name="use">确定</string>
    <string name="progress_image_select">正在发表中...</string>
    <string name="camrera">拍照</string>
    <string name="photo">相册</string>
    <string name="picture_exits">图片已存在</string>
    <string name="picture_save_success">保存成功</string>
    <string name="Complete">发表成功~</string>
    <string name="Error">发表失败，请重试</string>
    <string name="Upload">正在发表中...</string>
    <string name="progress_delete">正在删除，呜呜~</string>
    <string name="progress_feedback">正在吐槽，嘻嘻~</string>
    <string name="weather_input">今天的天气是：</string>
    <string name="weather_1">晴天</string>
    <string name="weather_2">雨天</string>
    <string name="weather_3">多云</string>
    <string name="weather_4">阴天</string>
    <string name="tips">亲爱的璐宝宝</string>
    <string name="warning">删除之后不可恢复，确定要删除吗？</string>
    <string name="cancel">放弃</string>
    <string name="button_ok">删除</string>
    <string name="common_loading_tip">小璐乱撞中……</string>
    <string name="theme">主题</string>
    <string name="candy">糖果</string>
    <string name="arty">文艺</string>
    <string name="antique">古风</string>
    <string name="theme_mon">风景</string>
    <string name="http_failed">呜呜，网络出问题了吗~</string>
    <string name="togoter">璐宝宝\n我们在一起</string>
    <string name="theme_love">爱心</string>

    <string name="tab_home">首页</string>
    <string name="tab_diary">日记</string>
    <string name="tab_day">纪念</string>
    <string name="tab_mine">我的</string>
    <string name="tab_public">发布</string>
    <string name="love_day">这是我们相爱的</string>
    <string name="love_day_1">第</string>
    <string name="love_day_2">天</string>
    <string name="share">分享</string>
    <string name="public_diary">日记</string>
    <string name="public_anniversary">纪念日</string>
    <string name="public_liluyulu">李璐语录</string>
    <string name="input_quo_hit_content">写下你的李璐语录……</string>
    <string name="write_quo">写李璐语录</string>
    <string name="add_quotation_err">李璐语句不能为空哦</string>
    <string name="input_day_hit_content">亲爱的璐宝宝，这是什么纪念日呢？</string>
    <string name="add_day_time">请选择日期</string>
    <string name="add_anniversary_err_title">请还没写纪念日名称呢</string>
    <string name="add_anniversary_err_date">还没选择日期呢</string>
    <string name="select_date">选择日期</string>
    <string name="write_day">添加纪念日</string>
    <string name="anniversary">周年纪念日</string>
    <string name="liluyulu_item">李璐语录</string>
    <string name="today">今天</string>
    <string name="need">还有</string>

    <string name="ann_1">约会</string>
    <string name="ann_2">吃饭</string>
    <string name="ann_3">旅行</string>
    <string name="ann_4">看电影</string>
    <string name="ann_5">学习</string>
    <string name="ann_6">不可描述</string>
    <string name="ann_7">唱K</string>
    <string name="ann_8">其它</string>
    <string name="lubaobao">璐宝宝</string>
    <string name="account">账号</string>
    <string name="personal">小楠和小璐</string>
    <string name="scan">扫一扫</string>
    <string name="feedback">我要吐槽</string>
    <string name="about">关于</string>
    <string name="good">点赞</string>
    <string name="exit">退出</string>
    <string name="light">闪光灯</string>
    <string name="input_feedback_hit_content">亲爱的璐宝宝要吐槽些什么呢？</string>
    <string name="feedback_title">吐槽标题</string>
    <string name="feedback_title_empty">吐槽标题不能为空哦</string>
    <string name="feedback_content">吐槽内容</string>
    <string name="feedback_content_empty">吐槽内容不能为空哦</string>
    <string name="input_feedback_hit_title">吐槽标题</string>
    <string name="submit">提交</string>
    <string name="about_content">焕然一璐是楠宝宝与璐宝宝的专属情侣App。\n主要功能有：在一起的天数记录，照片发表平台，焕然一璐日记平台，李璐语录、周年纪念日倒计时平台。\n焕然一璐商标所有权归楠宝宝与璐宝宝所有，焕然一璐App在中国大陆范围内受到法律保护。\n最后再说一句，璐宝宝，我爱你哈！O(∩_∩)O~~</string>
    <string name="check_for_update">检查更新</string>
    <string name="exit_warning">不要走嘛，再玩一会呗，亲爱哒。</string>
    <string name="exit_sure">我要走啦</string>
    <string name="exit_cancel">继续玩会</string>
    <string name="nanbaobao">楠宝宝</string>
    <string name="select_user_title">选择用户</string>
    <string name="select_user_warning">我是璐宝宝呢？还是楠宝宝？</string>
    <string name="liluyulu">李璐语录</string>
    <string name="read_day">每天读点</string>
    <string name="liluyulu_top">Li Lu</string>
    <string name="liluyulu_qu">Quotations</string>
    <string name="liluyulu_au">黄李璐 〇 编著</string>
    <string name="liluyulu_pub">焕然一璐出版社</string>
    <string name="download_unable">下载服务不可用，请璐宝宝大人启用</string>
    <string name="have_update">检测到新版本</string>
    <string name="not_update">以后再说</string>
    <string name="update_imm">立即\n升级</string>
    <string name="apk_download_ing">焕然一璐正在后台下载...</string>
    <string name="is_new">已经是最新版本啦！</string>
    <string name="progress_searching">正在搜索啦别急...</string>
    <string name="search_key_empty">请输入要搜索的关键词</string>

</resources>
