<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:emojicon="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical">


    <com.lovelilu.widget.AppToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leftButtonIcon="@drawable/common_toobar_icon_back"
        app:myTitle="@string/liluyulu"
        app:rightButtonIcon="@drawable/icon_public"
        app:showSearchView="false" />

    <View
        android:id="@+id/view_shadow"
        android:layout_width="match_parent"
        android:layout_height="@dimen/shadow_size"
        android:layout_below="@id/toolbar"
        android:background="@drawable/shape_toolbar_shadow"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/ll_quotation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/bg_mailer"
        android:orientation="vertical"
        android:padding="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tv_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/liluyulu_top"
                android:textColor="#88A666"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_1"
                android:text="@string/liluyulu_qu"
                android:textColor="#88A666"
                android:textSize="20sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/liluyulu_au"
                android:textColor="#151410"
                android:textSize="16sp" />

        </RelativeLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/read_day"
            android:textColor="#151410"
            android:textSize="45sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/liluyulu"
            android:textColor="#0F2847"
            android:textSize="50sp"
            android:textStyle="bold" />


        <com.rockerhieu.emojicon.EmojiconTextView
            android:id="@+id/tv_quotation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:hint="@string/input_quo_hit_content"
            android:lines="4"
            android:maxLength="80"
            android:text="哈啊哈哈，李璐我爱你"
            android:textColor="#151410"
            android:textSize="@dimen/item_title_txt_size"
            android:visibility="visible"
            emojicon:emojiconAlignment="baseline"
            emojicon:emojiconSize="@dimen/emoji_size" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_heart"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_heart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="15dp"
                android:text="@string/liluyulu_pub"
                android:textColor="#151410"
                android:textSize="16sp" />

        </RelativeLayout>

    </LinearLayout>


</LinearLayout>
