<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:emojicon="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.lovelilu.widget.AppToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leftButtonIcon="@drawable/common_toobar_icon_back"
        app:myTitle="@string/about"
        app:rightButtonIcon="@drawable/icon_public"
        app:showSearchView="false" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/shadow_size"
        android:background="@drawable/shape_toolbar_shadow"
        android:visibility="visible" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/tv_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:lines="2"
                android:text="@string/app_name"
                android:textColor="@color/grey"
                android:textSize="17sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="top"
                android:text="@string/about_content"
                android:textColor="@color/grey"
                android:textSize="16sp" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_update"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:text="@string/check_for_update"
                    android:textColor="@color/grey"
                    android:textSize="16sp" />

            </RelativeLayout>


        </LinearLayout>


    </ScrollView>


</LinearLayout>
