<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical">


    <com.lovelilu.widget.AppToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:myTitle="@string/app_name"
        app:showSearchView="false" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="3dp"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_start_no_font"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/home_center_outline">

                <TextView
                    android:id="@+id/tv_day_des"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="25dp"
                    android:text="@string/love_day"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_day_des"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="9dp"
                    android:gravity="center|bottom"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_day_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/love_day_1"
                        android:textColor="@color/white"
                        android:textSize="18sp" />


                    <TextView
                        android:id="@+id/tv_day"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="16000"
                        android:textColor="@color/white"
                        android:textSize="40sp" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/love_day_2"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </LinearLayout>
            </RelativeLayout>

        </RelativeLayout>


    </ScrollView>


</LinearLayout>

