<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/bg_grey"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="2dp">
    <!-- android:background="@drawable/bg_grey" -->
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/tips"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/warning"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginTop="15dp">

        <View
            android:id="@+id/v_line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#d4d3d8" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/v_line"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/bg_dialog"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="@color/base_color"
                    android:textSize="18sp" />

            </LinearLayout>

            <View
                android:id="@+id/v_dividel"
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="#d4d3d8"
                android:visibility="visible" />

            <LinearLayout
                android:id="@+id/ll_sure"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/bg_dialog"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_sure"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/button_ok"
                    android:textColor="@color/base_color"
                    android:textSize="18sp"
                    android:visibility="visible" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>