<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!--<ImageView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_alignParentTop="true"-->
    <!--android:layout_centerInParent="true"-->
    <!--android:layout_marginBottom="0dp"-->
    <!--android:scaleType="centerCrop"-->
    <!--android:src="@drawable/splash_love" />-->

    <RelativeLayout
        android:id="@+id/rl_blur"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/splash_love_blur" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/home_center_outline">

            <TextView
                android:id="@+id/tv_day_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:text="@string/love_day"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_day_des"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="9dp"
                android:gravity="center|bottom"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_day_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/love_day_1"
                    android:textColor="@color/white"
                    android:textSize="18sp" />


                <TextView
                    android:id="@+id/tv_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1600"
                    android:textColor="@color/white"
                    android:textSize="40sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/love_day_2"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>
        </RelativeLayout>


        <LinearLayout
            android:id="@+id/ll_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:visibility="visible"
            android:orientation="vertical">

        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>
